<resources>
    <string name="app_name" translatable="false">FitPost</string>
    <string name="tab_text_1">Maps</string>
    <string name="tab_text_2">Posts</string>
    <string name="tab_text_3">Exercises</string>
    <string name="google_maps_API_key" translatable="false">AIzaSyBBpxR0F5EW3BQRz7fWJr5BlAx8a_2PhoY</string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="About">About</string>
    <string name="Settings">Settings</string>
    <string name="AppVersion" translatable="false">0.0.11</string>
    <string name="socialmediaapp_powsta_a_w_2019_roku_w_ramach_zaj_prowadzonych_przez_umk" translatable="false">
        SocialMediaApp powstała w
        2019 roku w ramach zajęć prowadzonych przez UMK
    </string>
    <string name="hint">hint</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="monday">Monday</string>
    <string name="tuesday" translatable="false">Tuesday</string>
    <string name="wednesday" translatable="false">Wednesday</string>
    <string name="home">HOME</string>
    <string name="local">LOCAL</string>
    <string name="post_meal">ADD CONTENT</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="market">market</string>
    <string name="gym">gym</string>
    <string name="restaurant">restaurant</string>
    <string name="permision_denied">Permission Denied</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBBpxR0F5EW3BQRz7fWJr5BlAx8a_2PhoY</string>
    <string name="browserKey" translatable="false">AIzaSyBcc8ImqvU5Cg3bz2n5k6DiBaoOvhJ1fL4</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_on_map">Show on Map</string>
    <string name="title_activity_view_directions">Map</string>
    <string name="show_direction">Show direction</string>
    <string name="place_name">Place name</string>
    <string name="place_adress">Place Adress</string>
    <string name="open">Open :</string>
    <string name="your_position">Your position</string>
    <string name="please_wait">Please wait</string>
    <string name="appversion">AppVersion</string>
    <string name="about_app_inst"><![CDATA[Aplikacja mająca na celu usprawnić pomóc i zainspirować do życia w trybie fit. Zawiera ona 3 sekcje : mapy -> pomagają znaleść restuację, oraz sklepy w których można zaopatrzyć się w żywność oraz siłownie na których można zadbać o swoją witalność, posty -> miejsce mentalnej motywacji , gdzie można podzielić się swoimi osiągnięciami, umiejętnościami przyżądzania fit posiłków itp., ćwiczenia -> odliczanie interwałów czasowych wspomagających którtkie intensywne treningi.]]></string>
    <string name="connection">Connection</string>
    <string name="profile">Profile</string>
    <string name="ustawienia_konta">SETTINGS</string>
    <string name="change_picture">CHANGE PICTURE</string>
    <string name="wstaw_posta">CREATE POST</string>
    <string name="tre">CONTENT</string>
    <string name="tagi">TAGS</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="achievement">ACHIEVEMENT</string>
    <string name="body_and_mind">BODY AND MIND</string>
    <string name="healthy_lifestyle">HEALTHY LIFESTYLE</string>
    <string name="fit_diet">FIT DIET</string>
    <string name="sport_in_freetime">SPORT IN FREETIME</string>
    <string name="vegan_products">VEGAN PRODUCTS</string>
    <string name="image_to_post" translatable="false">image to post</string>
    <string name="post_mealt">SEND</string>
    <string name="image_captred" translatable="false">image captred</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="stoper">Timer</string>
    <string name="timer_length">Timer Length</string>
    <string name="timer_run_time">How many minutes should the timer run</string>
    <string name="post">POST</string>
    <string name="open_app">HOME</string>
    <string name="open_map">MAP</string>
    <string name="open_timer">TIMER</string>
</resources>
