<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_market"
            android:enabled="true"
            android:title="@string/market"
            android:icon="@drawable/ic_action_market"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_gym"
            android:enabled="true"
            android:title="@string/gym"
            android:icon="@drawable/ic_action_gym"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_restaurant"
            android:enabled="true"
            android:title="@string/restaurant"
            android:icon="@drawable/ic_action_restaurant"
            app:showAsAction="ifRoom"/>
</menu>