<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8A798"
        tools:context=".mastodon.AboutActivity">


    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="186dp"
            android:layout_height="68dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:src="@android:drawable/ic_menu_info_details"
            app:layout_constraintBottom_toTopOf="@+id/reycle_textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/reycle_textView2"
            android:layout_width="320dp"
            android:layout_height="430dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/about_app_inst"
            android:textAlignment="center"
            android:textColor="#8E2E44"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recycle_textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycle_textView3" />

    <TextView
            android:id="@+id/recycle_textView3"
            android:layout_width="159dp"
            android:layout_height="62dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="32dp"
            android:text="@string/appversion"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reycle_textView2"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="79dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/AppVersion"
            android:textColor="#8E2E44"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toEndOf="@+id/recycle_textView3"
            app:layout_constraintTop_toBottomOf="@+id/reycle_textView2"
            app:layout_constraintVertical_bias="0.128"
            tools:text="@string/AppVersion" />
</androidx.constraintlayout.widget.ConstraintLayout>