<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="#C8A798"
        android:layout_height="match_parent"
        tools:context=".AddFormulaActivity">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="413dp"
            android:layout_height="91dp"
            android:background="#8E2E44"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar2">
        <ImageButton
                android:background="#8E2E44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/next2" android:id="@+id/backAddButton"
                tools:layout_editor_absoluteX="16dp"
                android:contentDescription="@string/back" android:rotation="180f"
                android:scaleType="fitCenter" android:adjustViewBounds="true" android:maxHeight="45dp"
                tools:layout_editor_absoluteY="40dp"/>
        <TextView
                android:text="@string/post_meal"
                android:layout_width="250dp"
                android:layout_height="wrap_content" android:id="@+id/AddViewTitle" tools:layout_editor_absoluteY="36dp"
                tools:layout_editor_absoluteX="140dp" android:textStyle="bold"
                android:textColor="@color/cast_expanded_controller_progress_text_color"
                app:fontFamily="casual"
                android:textSize="30sp" android:lineSpacingExtra="8sp"
        />
        <ImageButton
                android:background="#8E2E44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/next2" android:id="@+id/nextAddButton"
                android:contentDescription="@string/next" tools:layout_editor_absoluteX="215dp"
                android:maxHeight="45dp" android:adjustViewBounds="true" android:scaleType="fitCenter"
                tools:layout_editor_absoluteY="23dp"/>

    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/textView7" tools:layout_editor_absoluteY="140dp"
            tools:layout_editor_absoluteX="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/add_meal" android:id="@+id/imageView4"/>
    <RadioGroup
            android:layout_width="318dp"
            android:layout_height="189dp" tools:layout_editor_absoluteY="115dp" tools:layout_editor_absoluteX="34dp">
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton4" android:layout_weight="1"/>
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
    </RadioGroup>
    <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/seekBar" android:layout_weight="1"
            tools:layout_editor_absoluteY="267dp" tools:layout_editor_absoluteX="34dp"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
    />
    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/toggleButton2"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
    />
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"/>
</androidx.constraintlayout.widget.ConstraintLayout>